--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "GSS challange More Data"
-author: "Put your name here!"
-date: "put the date here"
+author: "Leah Riganyan"
+date: "03/14/2023"
 output: html_document
 ---
 
@@ -44,7 +44,13 @@ If not, then whose view differs from whom??
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
+```{r}
+barchartGC(~race + cappun,data=mydata)
+barchartGC(~race + cappun,data=mydata, type="percent")
 
+```
+   
+Whites seem to favor it the most, others are closely behind, and blacks are most against capital punishment.
 
 ## Now with The Most data (fewer variables gives more data points)
 
