--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -60,8 +60,13 @@ Whites seem to favor it the most, others are closely behind, and blacks are most
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
-
-
+```{r}
+table1 <- xtabs(~race + cappun, data=mydata)
+rowPerc(table1)
+colPerc(table1)
+```
+   
+White people were 65% in favor of capital punishment, and 34% against. While 57% of blacks opposed it, 42% favored it. Others were 55% in favor, and 44% against.
 
 ## Now with More data
 
