--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -63,7 +63,11 @@ Even with less data, the results stayed the same. Whites were more in favor, nex
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 
-
+```{r}
+table1 <- xtabs(~race + cappun, data=mydata)
+rowPerc(table1)
+colPerc(table1)
+```
 
 
 
