--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -80,9 +80,11 @@ chisq.test(table1)
 chisqtestGC(table1)
 fisher.test(table1)
 ```
-
-
-
+```{r}
+fisherXY (mydata$race, mydata$cappun, printAll=TRUE)
+```
+   
+   
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
