--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -83,8 +83,9 @@ fisher.test(table1)
 ```{r}
 fisherXY (mydata$race, mydata$cappun, printAll=TRUE)
 ```
-   
-   
+   The p-value for blacks compared to whites is high, at 1.74... while the other two groups had little difference. At least, not to >.5%
+   The p-value comparing blacks and others is 0.06... while the comparison between whites and others is 0.256...
+      
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
