--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -89,3 +89,5 @@ fisherXY (mydata$race, mydata$cappun, printAll=TRUE)
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+   
+   Whites were most in favor of capital punishment when compared with either of the groups. Blacks opposed it the most. Others were in the middle, but still greatly in favor of capital punishment. Most of this data is the same, but the difference here now is that the percentages are higher due to the sample size.
