--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -97,4 +97,4 @@ The data shows us that there were only 1300 white people who were for capital pu
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
-When we looked at all data, everything ended up different. The fisherXY test tells us that between each race is a statistical difference enough to be significant.
+When we looked at all data, everything ended up different. The fisherXY test tells us that between each race is a statistical difference enough to be significant. There just wasn't enough data here to see statistical differences. The other branch we did narrowed the sample size. Still proving, though, that whites favored capital punishment more than any other race. Blacks were the greatest opposed. Others favored more than opposed, but they're in the middle. 
